--- a/src/app/child_components/tasks/child_components/task-list-item/task-list-item.component.css
+++ b/src/app/child_components/tasks/child_components/task-list-item/task-list-item.component.css
@@ -1,7 +1,46 @@
 .task-list-item {
   padding: 0.5rem 1rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
   border-bottom: 1px solid grey;
 }
 
+.small {
+  font-size: 0.75rem;
+}
+
+.pr-highest {
+  background-color: rgb(162, 128, 255);
+  color: white;
+}
+
+.pr-high {
+  background-color: rgb(128, 194, 255);
+  color: #004077;
+}
+
+.pr-medium {
+  background-color: rgb(128, 255, 145);
+  color: black;
+}
+
+.pr-low {
+  background-color: rgb(208, 207, 183);
+  color: black;
+}
+
+.pr-highest,
+.pr-high,
+.pr-medium,
+.pr-low {
+  padding: 0.2rem;
+  border-radius: 0.25rem;
+  margin-left: 1rem;
+}
+
+.task-bucket-name {
+  background: #c5dde2;
+  border: 1px dotted #3664e7;
+  border-radius: 0.25rem;
+  padding: 0.1rem 0.2rem;
+}
